fix: deploy azure